# collisions

./: .gitignore  CMakeLists.txt  setup.py
collisions/: solvers.py
src/: collisions.cpp
tests/: test.py
